--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,17 +2,18 @@
 set -g default-terminal "screen-256color"
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+# set -g status-bg '#666666'
+# set -g status-fg '#aaaaaa'
 
 # remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+# set -g status-left ''
+# set -g status-right ''
 
 # act like GNU screen
 # comments
 # unbind C-b
-# set -g prefix "C-\\"
+# set -g prefix "C-\;"
+# bind-key "C-" send-prefix
 
 # enable copy-paste http://goo.gl/DN82E
 # # enable RubyMotion http://goo.gl/WDlCy
@@ -24,5 +25,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+bind-key -n C-h select-window -t :-
+bind-key -n C-l select-window -t :+
