Handle mouse scrollback in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,3 +27,7 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -n C-h select-window -t :-
 bind-key -n C-l select-window -t :+
+
+# try to help with scrollback
+set-option -g terminal-overrides ',xterm*:smcup@:rmcup@'
+set-window-option -g mode-mouse off
