Snapshot prep for new device

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,4 +30,5 @@ bind-key -n C-l select-window -t :+
 
 # try to help with scrollback
 set-option -g terminal-overrides ',xterm*:smcup@:rmcup@'
-set-window-option -g mode-mouse off
+set -g mouse on
+# set-window-option -g mode-mouse off
